--- a/SpringBoot/SB0921/sb0921/.settings/org.eclipse.wst.common.component
+++ b/SpringBoot/SB0921/sb0921/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/view"/>
         <property name="java-output-path" value="/sb0921/target/classes"/>
         <property name="context-root" value="myfirst"/>
     </wb-module>
