--- a/SpringBoot/SB0921/sb0921/src/main/view/templates/show_inner.html
+++ b/SpringBoot/SB0921/sb0921/src/main/view/templates/show_inner.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<p th:text="'request属性:' + *{requestMessage}"/>
-	<p th:text="'session属性:' + *{sessionMessage}"/>
-	<p th:text="'application属性:' + *{applicationMessage}"/>
+	<p th:text="'session属性:' + *{session.sessionMessage}"/>
+	<p th:text="'application属性:' + *{application.applicationMessage}"/>
 </body>
 </html>
