--- a/SpringBoot/SB0921/sb0921/src/main/view/templates/show_member.html
+++ b/SpringBoot/SB0921/sb0921/src/main/view/templates/show_member.html
@@ -5,5 +5,9 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
 	</head>
 	<body>
+		<p th:text="'编号:' + *{member.mid}"/>
+		<p th:text="'薪水:' + *{member.salary}"/>
+		<p th:text="'年龄:' + *{member.age}"/>
+		<p th:text="'生日:' + *{member.birthday}"/>
 	</body>
 </html>
